dcc_scripts/preproc/out/aligned_svm_ncv/slurm_44215076.err
  File "/hpc/home/jz421/coganlab/jz421/GlobalLocal/src/analysis/preproc/make_epoched_data.py", line 57
    from src.analysis.utils.general_utils import calculate_RTs, save_channels_to_file, save_sig_chans, load_sig_chans, 
                                                                                                                       ^
SyntaxError: trailing comma not allowed without surrounding parentheses
